# MoL-ARC-AGI

./: .gitmodules  .pre-commit-config.yaml  ARChitects_repo_diagram.excalidraw  README.md  Utilities.py  environment.yml  inference.sh  install_dependencies.sh  params.json  pyproject.toml
Induction part/: dataloader.py  dependencies-for-induction.txt  induct.py  induction_runner.py  prompt_creator.py
Induction_part/: common.py  config.json  dataloader.py  execute.py  induct.py  induction_dependency  induction_runner.py  problem_class.py  program_debugging.py  prompt_creator.py  run_induction.py  validation.py
competition_code/: arc_loader.py  async_tools.py  common_stuff.py  model_runner.py  selection.py
experiments/: comparing_results.ipynb  formatting_data.py  inspecting_results_no_ttt.ipynb  inspecting_results_with_ttt.ipynb  loading_data.py  testing.ipynb  visualize_grids.py
kaggle_notebooks/: arc-prize-2024_kaggle.ipynb  arc-prize-2024_updated.ipynb  unsloth-download-2024-9-post4.ipynb
marc/: hello.py
src/: submission.py
src/mol_arc_agi/: SUBMISSION_README.md  data_augmentations.py  dataset.py  io_helpers.py  submission.py
src/mol_arc_agi/prototypes/: ARChitects_model.ipynb  load_data.ipynb
src/prototypes/: ARChitects_model.ipynb  load_data.ipynb
training_code/: arc_loader.py  inference_tools.py  model_tools.py  run_evaluation_Llama-rearc_with_ttt.py  run_evaluation_Llama-rearc_without_ttt-COPY.py  run_evaluation_Llama-rearc_without_ttt.py  run_finetuning_Llama-rearc.py  run_finetuning_Nemo-full.py  selection.py
(+7 files in other folders)
