[project]
name = "marc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pre-commit>=4.0.1",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.4.0",
    "intel-extension-for-pytorch>=2.5.0",
    "jupyterlab>=4.3.4",
    "unsloth>=2025.1.5",
    "jupyter>=1.1.1",
    "setuptools>=63",
    "pytest~=8.3.1",
    "einops~=0.8.0",
    "wheel~=0.43.0",
    "lion-pytorch~=0.2.2",
    "scipy~=1.14.0",
    "pandas~=2.2.2",
    "matplotlib~=3.9.1",
    "transformers>=4.45.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
