[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mol-arc-agi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.0"
dependencies = [
  "torch>=2.5.1",
  "torchvision>=0.20.1",
  "torchaudio>=2.4.0",
  "pre-commit>=4.0.1",
  "intel-extension-for-pytorch>=2.5.0",
  "jupyterlab>=4.3.4",
  "jupyter>=1.1.1",
  "unsloth>=2025.1.5",
  "transformers>=4.48.0",
  "numpy>=2.2.1",
  "matplotlib>=3.10.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
